Automatically remove dangling tasks from shim
- Terminate and remove dangling tasks from shim
  when processing the instance. Tasks can become
  dangling because shim was unavailable when the
  job was in the `terminating` status.
- Adjust the shim API to return task statuses to
  avoid redundant termination. Dangling task
  termination and removal works with the old API
  too, but may result in redundant termination
  requests and warnings if the task is already
  terminated, but not removed. This is
  particularly noticeable if
  `DSTACK_SERVER_KEEP_SHIM_TASKS` is set.
